fix css for modals on smaller screens

--- a/src/Components/AddPostModal/AddPostModal.css
+++ b/src/Components/AddPostModal/AddPostModal.css
@@ -82,3 +82,10 @@
     border: none;
     border-radius: 5px;
 }
+
+@media(min-width: 300px)and (max-width:500px){
+    .modalBackground{
+        width: 98%;
+        height: 75%;
+    }
+}
